Fix right align for twin columns

--- a/src/client/scss/app.scss
+++ b/src/client/scss/app.scss
@@ -119,6 +119,7 @@ img {
 
 	.right {
 		text-align: right;
+		align-items: flex-end;		
 	}
 }
 
